Dependencies and lang setup